# gittracker

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
gittracker/: __init__.py  __main__.py  command.py  gittracker.py
gittracker/display/: ascii.py  display.py  templates.py
gittracker/initialize/: find_repos.py
gittracker/parsers/: commandparser.py  subcommands.py
gittracker/repofile/: repofile.py
gittracker/tracker/: tracker.py
gittracker/util/: exceptions.py  util.py
gittracker/utils/: exceptions.py  utils.py
tests/: conftest.py
tests/ci-scripts/: before_install.sh  install.sh
tests/files/: mock-repo-paths.txt  repo-even-clean.cfg
tests/helpers/: constants.py  functions.py  helpers.py  mock_repo.py  tracker_helpers.py
tests/repo-configs/: TEMPLATE.cfg  commits-ahead-behind.cfg  commits-ahead.cfg  commits-behind.cfg  empty.cfg  even-clean.cfg  even-dirty.cfg  head-detached-ahead-clean.cfg  head-detached-ahead-dirty.cfg  head-detached-even-clean.cfg  head-detached-even-dirty.cfg  head-detached.cfg  mock-repo-paths.txt  no-remote-clean.cfg  no-remote-dirty.cfg  no-remote.cfg  submodule-detached.cfg  submodule-even-clean.cfg  submodule-multiple.cfg  submodule-not-initialized.cfg
tests/repo-configs/submodule-configs/: sm-ahead-clean.cfg  sm-ahead-dirty.cfg  sm-behind-clean.cfg  sm-detached.cfg  sm-even-clean.cfg  sm-even-dirty.cfg  sm-not-initialized.cfg
tests/tests/: helpers.py  test_cli.py  test_display.py  test_tracker.py
