[metadata]
name = gittracker
version = attr: gittracker.__version__
description = A Python-based CLI tool for tracking all of your git repositories in one place
long_description = file: README.md
author = Paxton Fitzpatrick
author_email = Paxton.C.Fitzpatrick@Dartmouth.edu
url = https://github.com/paxtonfitzpatrick/gittracker
license = ###### ADD LICENSE HERE ######
license_file = LICENSE
keywords = git, repository, repositories,
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: ###### ADD LICENSE HERE TOO ######
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
python_requires = >=3.6
include_package_data = True
packages = gittracker
# setuptools version with bug fixes for setup.cfg files
setup_requires = setuptools>=38.3.0
install_requires = GitPython

[options.entry_points]
console_scripts =
    gittracker = gittracker.__main__:main
